finish wireframe for question 1

--- a/question1_wireframe.html
+++ b/question1_wireframe.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Question One</title>
 </head>
 <body>
+    <header><h1>Question One:</h1></header>
+<main>
+<h2>What is the Capital of Florida?</h2>
+
+<form>
+        <input type="radio" id="orlando"  value="huey">
+ <label for="orlando">Orlando</label><br><br>
+ <input type="radio" id="miami"  value="miami">
+ <label for="miami">Miami</label> <br><br>
+
+ <input type="radio" id="tallahassee"  value="tallahassee">
+ <label for="tallahassee">Tallahassee</label> <br><br>
+
     
+ <input type="radio" id="fort-lauderdale"  value="fort-lauderdale">
+ <label for="fort-lauderdale">Fort Lauderdale</label> <br><br>
+
+</form>
+
+
+</main>
+
 </body>
 </html>
