--- a/question2_wireframe.html
+++ b/question2_wireframe.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>State Capital Quiz Question Two</title>
 </head>
 <body>
+    <header><h1>Question Two:</h1></header>
+<main>
+<h2>What is the Capital of California?</h2>
+
+<form>
     
+
+ <input type="radio" id="los-angeles"  value="los-angeles">
+ <label for="los-angeles">Los Angeles</label> <br><br>
+
+ <input type="radio" id="san-diego" value="san-diego">
+ <label for="san-diego">San Diego</label> <br><br>
+
+    
+ <input type="radio" id="san-franciso"  value="san-franciso">
+ <label for="san-franciso">San Francisco</label> <br><br>
+
+ <input type="radio" id="sacramento"  value="sacramento">
+ <label for="sacramento">Sacramento</label><br><br>
+
+</form>
+
+<input type= "button" value= "Submit Answer">
+
+
+</main>
+
 </body>
 </html>
