--- a/question3_wireframe.html
+++ b/question3_wireframe.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>State Capital Quiz Question Three</title>
 </head>
 <body>
+    <header><h1>Question Three:</h1></header>
+<main>
+<h2>What is the Capital of Texas?</h2>
+
+<form>
+        <input type="radio" id="austin"  value="austin">
+ <label for="austin">Austin</label><br><br>
+
+ <input type="radio" id="dallas"  value="dallas">
+ <label for="dallas">Dallas</label> <br><br>
+
+ <input type="radio" id="houston"  value="houston">
+ <label for="houston">Houston</label> <br><br>
+
     
+ <input type="radio" id="texas"  value="texas">
+ <label for="texas">Texas</label> <br><br>
+
+</form>
+
+
+<input type= "button" value= "Submit Answer">
+</main>
+
 </body>
 </html>
