--- a/question4_wireframe.html
+++ b/question4_wireframe.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>State Capital Quiz Question Four</title>
 </head>
 <body>
+    <header><h1>Question Four:</h1></header>
+<main>
+<h2>What is the Capital of Massachusetts?</h2>
+
+<form>
+        <input type="radio" id="salem"  value="salem">
+ <label for="salem">Salem</label><br><br>
+
+ <input type="radio" id="boston"  value="boston">
+ <label for="boston">Boston</label> <br><br>
+
+ <input type="radio" id="cambridge"  value="cambridge">
+ <label for="cambridge">Cambridge</label> <br><br>
+
     
+ <input type="radio" id="plymouth"  value="plymouth">
+ <label for="plymouth">Plymouth</label> <br><br>
+
+</form>
+
+
+<input type= "button" value= "Submit Answer">
+</main>
+
 </body>
 </html>
