--- a/question5_wireframe.html
+++ b/question5_wireframe.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>State Capital Quiz Question 5 =</title>
 </head>
 <body>
+    <header><h1>Question Five:</h1></header>
+<main>
+<h2>What is the Capital of New York?</h2>
+
+<form>
+        <input type="radio" id="new-york"  value="new-york">
+ <label for="new-york">New York</label><br><br>
+
+ <input type="radio" id="albany" value="albany">
+ <label for="albany">Albany</label> <br><br>
+
+ <input type="radio" id="buffalo"  value="buffalo">
+ <label for="buffalo">Buffalo</label> <br><br>
+
     
+ <input type="radio" id="syracuse"  value="syracuse">
+ <label for="syracuse">Syracuse</label> <br><br>
+
+</form>
+
+
+<input type= "button" value= "Submit Answer">
+</main>
+
 </body>
 </html>
