--- a/results_wireframe.html
+++ b/results_wireframe.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" src="main.css">
+    <title>State Capital Quiz</title>
 </head>
 <body>
-    
+    <header><h1>State Quiz App</h1></header>
+    <main>
+    <h3>Do you know your state capitals?</h3>
+    <h4>Let's find out!</h4>
+    <input type="button" value="Click Here to Begin!">
+    <br>
+    <br>
+    <img src="#" alt="Map of the United States"> 
+    </main>
 </body>
 </html>
