--- a/results_wireframe.html
+++ b/results_wireframe.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" src="main.css">
-    <title>State Capital Quiz</title>
+    <title>Results Page State Capital Quiz</title>
 </head>
 <body>
-    <header><h1>State Quiz App</h1></header>
+    <header><h1>Results</h1></header>
     <main>
-    <h3>Do you know your state capitals?</h3>
-    <h4>Let's find out!</h4>
-    <input type="button" value="Click Here to Begin!">
+    <h3>You got x out of 5</h3>
+
+    <input type="button" value= "Click to Try Again">
     <br>
     <br>
     <img src="#" alt="Map of the United States"> 
