--- a/homepage_wireframe.html
+++ b/homepage_wireframe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" src="main.css">
+    <link rel="stylesheet" href="main.css">
     <title>State Capital Quiz</title>
 </head>
 <body>
