testing to link to question one

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
     <h3>Do you know your state capitals?</h3>
     <h4>Let's find out!</h4>
-    <input type="button" value="Click Here to Begin!">
+    <input type="button" action='\question1_wireframe.html' value="Click Here to Begin!">
     <br>
     <br>
     <img src="#" alt="Map of the United States"> 
