add form to bottom input

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <main>
     <h3>Do you know your state capitals?</h3>
     <h4>Let's find out!</h4>
-    <input type="button" action='/question1_wireframe.html' value="Click Here to Begin!">
+        <form  action='/question1_wireframe.html'>
+    <input type="button" value="Click Here to Begin!">
+            </form>
     <br>
     <br>
     <img src="#" alt="Map of the United States"> 
