--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
     <h3>Do you know your state capitals?</h3>
     <h4>Let's find out!</h4>
-        <form  action='/question1_wireframe.html'>
+        <form  action='question1_wireframe.html'>
     <input type="button" value="Click Here to Begin!">
             </form>
     <br>
