--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>Do you know your state capitals?</h3>
     <h4>Let's find out!</h4>
         <form  action='https://thinkful-ei-jaguar.github.io/Quiz_AppCK/question1_wireframe.html'>
-    <input type="button" value="Click Here to Begin!">
+    <input type="submit" value="Click Here to Begin!">
             </form>
     <br>
     <br>
