--- a/question1_wireframe.html
+++ b/question1_wireframe.html
@@ -26,9 +26,9 @@
  <label for="fort-lauderdale">Fort Lauderdale</label> <br><br>
 
 </form>
-
-<input type= "button" value= "Submit Answer">
-
+<form action= "https://thinkful-ei-jaguar.github.io/Quiz_AppCK/question2_wireframe.html">
+<input type= "submit" value= "Submit Answer">
+    </form>
 </main>
 
 </body>
