--- a/question2_wireframe.html
+++ b/question2_wireframe.html
@@ -30,7 +30,9 @@
 
 </form>
 
-<input type= "button" value= "Submit Answer">
+<form action= "https://thinkful-ei-jaguar.github.io/Quiz_AppCK/question3_wireframe.html">
+<input type= "submit" value= "Submit Answer">
+    </form>
 
 
 </main>
