--- a/question3_wireframe.html
+++ b/question3_wireframe.html
@@ -29,7 +29,9 @@
 </form>
 
 
-<input type= "button" value= "Submit Answer">
+<form action= "https://thinkful-ei-jaguar.github.io/Quiz_AppCK/question4_wireframe.html">
+<input type= "submit" value= "Submit Answer">
+    </form>
 </main>
 
 </body>
