--- a/question4_wireframe.html
+++ b/question4_wireframe.html
@@ -28,8 +28,10 @@
 
 </form>
 
+<form action= "https://thinkful-ei-jaguar.github.io/Quiz_AppCK/question5_wireframe.html">
+<input type= "submit" value= "Submit Answer">
+    </form>
 
-<input type= "button" value= "Submit Answer">
 </main>
 
 </body>
