--- a/question5_wireframe.html
+++ b/question5_wireframe.html
@@ -28,8 +28,9 @@
 
 </form>
 
-
-<input type= "button" value= "Submit Answer">
+<form action="https://thinkful-ei-jaguar.github.io/Quiz_AppCK/results_wireframe.html>
+<input type= "submit" value= "Submit Answer">
+    </form>
 </main>
 
 </body>
