--- a/results_wireframe.html
+++ b/results_wireframe.html
@@ -11,8 +11,9 @@
     <header><h1>Results</h1></header>
     <main>
     <h3>You got x out of 5</h3>
-
-    <input type="button" value= "Click to Try Again">
+<form action="https://thinkful-ei-jaguar.github.io/Quiz_AppCK/index.html">
+    <input type="submit" value= "Click to Try Again">
+    </form>
     <br>
     <br>
     <img src="#" alt="Map of the United States"> 
