--- a/question5_wireframe.html
+++ b/question5_wireframe.html
@@ -28,9 +28,10 @@
 
 </form>
 
-<form action="https://thinkful-ei-jaguar.github.io/Quiz_AppCK/results_wireframe.html>
+<form action="https://thinkful-ei-jaguar.github.io/Quiz_AppCK/results_wireframe.html">
 <input type= "submit" value= "Submit Answer">
     </form>
+                                            
 </main>
 
 </body>
